<resources>
    <string name="app_name">Tutor Planner</string>


    <!--*************************student strings***********************-->
    <string name="student_main_title">Student</string>
    <string name="student_form_lable_name">Name</string>
    <string name="student_form_lable_date">Date</string>
    <string name="student_form_lable_class">Classes</string>
    <string name="student_form_lable_Contact_no">Contact Number</string>
    <string name="student_form_lable_address">Address</string>
    <string name="student_add_form_add_btn_value">Add</string>
    <string name="student_addnewstudentform_title">New Student</string>
    <string name="student_form_age_hint">age</string>
    <string name="student_form_hint_select_class">select class</string>
    <string name="student_form_ontact_no_hint">enter number</string>
    <string name="student_form_address_hint">enter address</string>
    <string name="student_students_search_title">Find Student</string>
    <string name="student_studentssearch_Search_students_hint">Search students...</string>
    <string name="student_display_student_details_dateofbirth">Date Of Birth</string>
    <string name="student_edit_student_form_edit_btn_value">Update</string>
    <string name="student_editstudentform_title">Edit Student</string>
    <string name="student_display_student_details_address">Address</string>
    <string name="student_display_student_update_payment_note_btn">Update Payment Note</string>
    <string name="student_display_student_add_to_a_new_class_btn">Add To A New Class</string>
    <string name="student_validation_error_name">Name cannot be empty</string>
    <string name="student_validation_error_phoneNo">Invalid format</string>
    <string name="student_addToClassForm_Payment_lable">Payment</string>
    <string name="student_paymentForm_month">Month/Semester</string>
    <string-array name="student_classes_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <!--Assignment Strings-->
    <string name="assign_title">Assignments</string>
    <string name="new_Asign">New Assignment</string>
    <string name="ex_Asign">Existing Assignment</string>
    <string name="up_Asign">Update  Assignment</string>
    <string name="Assign_name">Assignment Name</string>
    <string name="assign_add_title">Title</string>
    <string name="assign_mod_name">Module Name</string>
    <string name="Qs">Questions</string>
    <string name="mark">Marks</string>
    <string name="assign_date">Date</string>
    <string name="assign_title_name">Photosynthesis</string>
    <string name="assign_btnDone">Done</string>
    <string name="assign_btnUp">Update</string>
    <string name="title_activity_exist_assign">exist_Assign</string>

    <!--Class Strings-->
    <string name="class_btn_Monday">Monday</string>
    <string name="class_btn_wednesday">Wednesday</string>
    <string name="class_btn_friday">Friday</string>
    <string name="class_btn_tuesday">Tuesday</string>
    <string name="class_btn_thursday">Thursday</string>
    <string name="class_tv__header_Classes">Classess</string>
    <string name="class_tv_Schedule">Schedule</string>
    <string name="class_tv_header_newClass">New Class</string>
    <string name="class_tv_label_day">Day</string>
    <string name="class_tv_label_time">Time</string>
    <string name="class_et_select_time">Select time</string>
    <string name="class_hint_enter_fee">Enter fee</string>
    <string name="class_tv_label_monthlyfee">Monthly Fee</string>
    <string name="class_hint_enterClassName">Enter class name</string>
    <string name="class_btn_add">Add</string>
    <string name="class_tv_label_class">Class</string>
    <string name="class_main_nav_Class">Class</string>
    <string name="class_btn_saturday">Saturday</string>
    <string name="class_btn_sunday">Sunday</string>
    <string name="class_tv_colon">:</string>
    <string name="class_btn_module">Module</string>
    <string name="class_btn_Student">Student</string>
    <string name="class_btn_assignement">Assignement</string>
    <string name="class_btn_update">Update</string>
    <string name="class_tv_header_EditClass">Edit Class</string>
    <string name="class_tv_noData">No Classes</string>
    <string name="class_tv_header_Students">Students</string>
    <string name="class_tv_noStudents">No Students</string>
    <string-array name="class_arryDays">
        <item>Select day</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <!--Module Strings-->
    <string name="btn_ModuleAdd">ADD</string>
    <string name="tv_ModuleName">Module Name</string>
    <string name="tv_NewModule">New Module</string>
    <string name="tv_ModuleTopic">Modules</string>
    <string name="topicmoduleedit">Modules</string>
    <string name="topicmoduleedit1">Edit Module</string>

    <!--Main page Strings-->
    <string name="tv_header_MainPage">Tutor Planner</string>
    <string name="tv_header_MainPageDashboard">Dashboard</string>
    <string name="btnEditModule">EDIT</string>
    <string name="moduleNav_btn">Modules</string>
    <string name="btn_AssingmentsModule">Assignments</string>

</resources>