<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/assign_purple_shade"
    tools:context=".Assignment_Exist">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/assign_card2"
            android:paddingLeft="50dp"
            android:paddingTop="20dp"
            android:text="@string/ex_Asign"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView00"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/assign_add_title"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/title_spin"
            android:layout_width="290dp"
            android:layout_height="42dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:background="@drawable/assign_in_bg"
            android:ems="10"
            android:gravity="center"
            android:textColor="@color/assign_main_purple"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/assign_mod_name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/mod_spin"
            android:layout_width="290dp"
            android:layout_height="42dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:background="@drawable/assign_in_bg"
            android:ems="10"
            android:gravity="center"
            android:textColor="@color/assign_main_purple"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/assign_date"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/exist_date"
            android:layout_width="256dp"
            android:layout_height="53dp"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:background="@drawable/assign_in_bg"
            android:ems="10"
            android:gravity="center"
            android:inputType="date"
            android:text="12/02/2021"
            android:textColor="@color/assign_main_purple"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/exist_add_btn"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/student_submit_btn_bg"
            android:text="@string/assign_btnDone" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>