<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/class_madd_background"
    tools:context=".ClassAdd">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_main"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/class_madd_backgrounda_toolbar"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/class_ic_menubar" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constaint_layout_middle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/class_top_round_corners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_main"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/tv_newClass"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/class_tv_header_newClass"
            android:textColor="@color/purple_500"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="0dp"
            android:layout_height="500dp"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="24dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_newClass">

            <TextView
                android:id="@+id/tv_label_day"
                android:layout_width="78dp"
                android:layout_height="wrap_content"
                android:gravity="fill"
                android:text="@string/class_tv_label_day"
                android:textColor="@color/purple_500"
                android:textSize="@dimen/class_text_size_inside_layout"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/class_spinner_days"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.023"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/class_et_className" />

            <TextView
                android:id="@+id/tv_label_time"
                android:layout_width="107dp"
                android:layout_height="wrap_content"
                android:gravity="fill"
                android:text="@string/class_tv_label_time"
                android:textColor="@color/purple_500"
                android:textSize="@dimen/class_text_size_inside_layout"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/class_et_classtime"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.017"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/class_spinner_days" />

            <EditText
                android:id="@+id/class_et_classtime"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:background="@drawable/class_input_field_border"
                android:drawableEnd="@drawable/class_ic_access_time"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/class_et_select_time"
                android:inputType="time"
                android:padding="10dp"
                app:layout_constraintBottom_toTopOf="@+id/tv_label_monthlyfee"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_time" />

            <EditText
                android:id="@+id/class_et_classfee"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/class_input_field_border"
                android:ems="10"
                android:hint="@string/class_hint_enter_fee"
                android:inputType="numberDecimal"
                android:padding="10dp"
                app:layout_constraintBottom_toTopOf="@+id/class_btn_new_class_add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_monthlyfee" />

            <TextView
                android:id="@+id/tv_label_monthlyfee"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:gravity="fill"
                android:text="@string/class_tv_label_monthlyfee"
                android:textColor="@color/purple_500"
                android:textSize="@dimen/class_text_size_inside_layout"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/class_et_classfee"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/class_et_classtime" />

            <Spinner
                android:id="@+id/class_spinner_days"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:animateLayoutChanges="false"
                android:background="@drawable/class_input_field_border"
                android:dropDownWidth="match_parent"
                android:isScrollContainer="false"
                android:padding="2dp"
                android:spinnerMode="dropdown"
                app:layout_constraintBottom_toTopOf="@+id/tv_label_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_day" />

            <EditText
                android:id="@+id/class_et_className"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:background="@drawable/class_input_field_border"
                android:ems="10"
                android:hint="@string/class_hint_enterClassName"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:singleLine="false"
                app:layout_constraintBottom_toTopOf="@+id/tv_label_day"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_class" />

            <TextView
                android:id="@+id/tv_label_class"
                android:layout_width="89dp"
                android:layout_height="wrap_content"
                android:gravity="fill"
                android:text="@string/class_tv_label_class"
                android:textColor="@color/purple_500"
                android:textSize="@dimen/class_text_size_inside_layout"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/class_et_className"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.008"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/class_btn_new_class_add"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="70dp"
                android:layout_marginBottom="24dp"
                android:text="@string/class_btn_add"
                app:cornerRadius="@dimen/class_btn_round_corners"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/class_et_classfee" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_Classes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="28dp"
        android:text="@string/class_tv__header_Classes"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/constaint_layout_middle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_main" />

    <ImageView
        android:id="@+id/mainAppIcon"
        android:layout_width="73dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_Classes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_main"
        app:srcCompat="@drawable/class_main_app_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>